err/cu-oi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cu_oi-0.1.egg-info'...
Listing './lib/python3.5/site-packages/oi-seguridad'...
Compiling './lib/python3.5/site-packages/oi-seguridad/Entrenamiento.py'...
***   File "./lib/python3.5/site-packages/oi-seguridad/Entrenamiento.py", line 31
    print datos
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oi-seguridad/Proceso.py'...
***   File "./lib/python3.5/site-packages/oi-seguridad/Proceso.py", line 36
    print "en obtener centro, lista len " ,len(lista)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oi-seguridad/PuntosBiometricos.py'...
***   File "./lib/python3.5/site-packages/oi-seguridad/PuntosBiometricos.py", line 82
    print "Distancias"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oi-seguridad/Seguridad.py'...
***   File "./lib/python3.5/site-packages/oi-seguridad/Seguridad.py", line 33
    print "params:", params
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oi-seguridad/Utilerias.py'...
***   File "./lib/python3.5/site-packages/oi-seguridad/Utilerias.py", line 36
    print "Imagen Tomada"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
